src/main/java/org/example/interfaces/segregation/good/Database.java
package org.example.interfaces.segregation.good;

public class Database implements  DBDaoInterface{
    @Override
    public void connect() {

    }

    @Override
    public void disconnect() {

    }
}
